--- a/develop/package.json
+++ b/develop/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "waitress.js",
   "scripts": {
+    "build":"webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node waitress.js",
     "lite-server": "lite-server"
