--- a/develop/package.json
+++ b/develop/package.json
@@ -27,6 +27,9 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0"    
+    "concurrently": "^5.3.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "^4.4.0",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
