--- a/develop/package.json
+++ b/develop/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node waitress.js",
+    "start":"if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod":"npm run build && node waitress.js",
+    "start:dev":"concurrently\"npm run waitress\"\"cd client && npm run start\"",
     "lite-server": "lite-server"
   },
   "repository": {
