--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "progressive web app for tracking financial transactions",
   "main": "waitress.js",
   "scripts": {
-    "start":"if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod":"npm run build && node server.js",
-    "start:dev":"concurrently \"npm run server\" \"cd client && npm run start\"",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "npm run build && node waitress.js",
+    "start:dev": "concurrently \"npm run waitress\" \"cd client && npm run start\"",
     "server": "nodemon waitress.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
@@ -31,6 +31,6 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7"    
   }
 }
