--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "npm run build && node waitress.js",
-    "start:dev": "concurrently \"npm run waitress\" \"cd client && npm run start\"",
+    "start:dev": "concurrently \"npm run waitress\" npm run start\"",
     "server": "nodemon waitress.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd client && npm install",
-    "client": "cd client && npm start"
+    "install": "cd client && npm install"    
   },
   "repository": {
     "type": "git",
