--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "progressive web app for tracking financial transactions",
   "main": "waitress.js",
   "scripts": {
-    // "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "npm run build && node waitress.js",
-    // "start:dev": "concurrently \"npm run waitress\" npm run start\"",
+    "start": "npm run build && node waitress.js",
     "server": "nodemon waitress.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd client && npm install"    
